# lambdacnc-lc3d

./: .gitattributes  .gitignore  LICENSE  lambdacnc.cabal  lambdacnc.cap  lambdaray.cap
data/engine/: lambdacnc.json  lambdacnc.lc  lambdacnc.ppl
data/engine/lambdacnc/: lambdacnc.json  lambdacnc.lc  lambdacnc.ppl
data/engine/lambdacnc/shaders/: 0.vert  2.vert  3.frag  3.vert  5.frag  5.vert
data/engine/lambdaray/: lambdaray.json  lambdaray.lc  lambdaray.ppl
data/engine/lambdaray/shaders/: 0.frag  0.vert
data/engine/shaders/: 0.frag  0.vert  1.frag  1.vert  2.frag  2.vert  3.frag  3.vert  4.vert  5.frag  5.vert  6.frag  6.vert
data/lc/: Builtins.lc  Prelude.lc
data/templates/: data.hs.ede
examples/: Cube.scad  Cube.stl  Hello.hs  HelloEmbedded.hs  HelloOBJ.hs  cube.mtl  hello.json  hello.lc  hello_stl.json  pickInt.hs
src-generated/LambdaCube/: IR.hs  Mesh.hs  PipelineSchema.hs  TypeInfo.hs
src/Codec/Wavefront/: Lexer.hs  Token.hs
src/Data/: Vect.hs
src/Data/Vect/: Float.hs
src/Data/Vect/Float/: Base.hs  GramSchmidt.hs  Instances.hs  Interpolate.hs
src/Data/Vect/Float/Util/: Dim2.hs  Dim3.hs  Dim4.hs  Projective.hs  Quaternion.hs
src/LambdaCNC/: Viewer.hs
src/LambdaCube/: Compiler.hs  GL.hs  Linear.hs  MtlParser.hs  OBJ.hs  PipelineSchemaUtil.hs
src/LambdaCube/Compiler/: Core.hs  CoreToIR.hs  DeBruijn.hs  DesugaredSource.hs  Infer.hs  InferMonad.hs  Lexer.hs  Parser.hs  Patterns.hs  Pretty.hs  Statements.hs  Utils.hs
src/LambdaCube/DDL/: Definitions.hs  Language.hs
src/LambdaCube/GL/: Backend.hs  Data.hs  Input.hs  Mesh.hs  Type.hs  Util.hs
src/LambdaRay/: Schwarzschild.hs
tools/: irgen.hs  lambdacnc.hs  lambdaray.hs  lc-lsp.hs  lc.hs  server.hs
